# unisuite

./: .editorconfig  .gitignore  .terraform.lock.hcl  Cargo.toml  LICENSE  Makefile  README.md  Vagrantfile  main.tf  variables.tf
asbot/: Cargo.toml  Dockerfile  Makefile  README.md
asbot/src/: discord.rs  main.rs  server.rs
scraper/: .gitignore  Dockerfile  Makefile  main.tf  outputs.tf  variables.tf
scraper/cron/: usscraper
scraper/lib/: moodle.sh
scraper/rules/: sample.rule
scripts/: artifacts.sh
terraform/: .gitignore  .terraform.lock.hcl  Makefile  containers.tf  images.tf  main.tf  networks.tf  syslog-ng.conf  variables.tf  volumes.tf
terraform/env/: vars.tfvars
terraform/modules/dev/: main.tf  outputs.tf  variables.tf
terraform/modules/prod/: main.tf  outputs.tf  variables.tf
usdiff/: Cargo.toml  Dockerfile  Makefile
usdiff/src/: main.rs
uslib/: Cargo.toml  build.rs
uslib/protos/com/cezarmathe/unisuite/: mevents.proto  scraper.proto
uslib/src/: blockz.rs  lib.rs  model.rs
uslib/src/types/: mod.rs  urlext.rs
usscraper/: Dockerfile  Makefile  README.md
usscraper/cron/: usscraper
usscraper/lib/: moodle.sh  usscraper.sh
usscraper/rules/: .gitignore
watchman/: Cargo.toml  Dockerfile  Makefile
watchman/src/: asbot_client.rs  config.rs  main.rs  server.rs  watcher.rs
