[package]
name = "asbot"
version = "0.1.0"
authors = ["cezarmathe <me@cezarmathe.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.0", features = ["json"] }
tokio = { version = "0.2", default_features = false, features = ["full"] }
uslib = { path = "../uslib" }
