[package]
name = "asbot"
version = "0.1.0"
authors = ["cezarmathe <me@cezarmathe.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0.2", default_features = false, features = ["full"] }
uslib = { path = "../uslib" }
