[package]
name = "asbot"
version = "0.1.1"
authors = ["cezarmathe <me@cezarmathe.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = "0.10.2"

[dependencies.serde]
version  = "1.0.120"
features = ["derive"]

[dependencies.uslib]
path = "../uslib"
