[package]
name = "usdiff"
version = "0.1.0"
authors = ["cezarmathe <me@cezarmathe.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.serde]
version  = "1.0.121"
features = ["derive"]

[dependencies.uslib]
path = "../uslib"
