[package]
name = "uslib"
version = "0.1.0"
authors = ["cezarmathe <me@cezarmathe.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hostname = "0.3.1"
once_cell = "1.5.2"
prost = "0.6.0"
slog = "2.7.0"
slog-syslog = "0.12.0"
tonic = { version = "0.3.1", features = ["tls"] }

[build-dependencies]
tonic-build = { version = "0.3.1", features = ["prost"] }
