[package]
name = "uslib"
version = "0.1.0"
authors = ["cezarmathe <me@cezarmathe.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow      = "1.0.38"
envy        = "0.4.2"
hostname    = "0.3.1"
once_cell   = "1.5.2"
prost       = "0.7.0"
serde-diff  = "0.4.1"
serde_json  = "1.0.61"
slog-syslog = "0.12.0"
url         = "2.2.0"

[dependencies.blockz]
git      = "https://github.com/selftechio/blockz.git"
features = ["no_absolute_paths"]

[dependencies.chrono]
version  = "0.4.19"
features = ["serde"]

[dependencies.config]
version          = "0.10.1"
default_features = false

[dependencies.reqwest]
version          = "0.11.0"
default_features = false
features         = ["json", "rustls-tls", "trust-dns"]

[dependencies.serde]
version  = "1.0.121"
features = ["derive"]

[dependencies.slog]
version  = "2.7.0"
features = ["max_level_trace", "release_max_level_info"]

[dependencies.tokio]
version          = "1.1.0"
default_features = false
features         = ["full"]

[dependencies.tonic]
version  = "0.4.0"
features = ["tls"]

[build-dependencies]
tonic-build = { version = "0.4.0", features = ["prost"] }
